--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,28 @@
-<h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
+<h1><%=title%></h1>
+<form name="form1" method="POST" action="/submit">
+  <table>
+    <tr>
+      <td>First name</td>
+      <td><input type="text" name="fname" /></td>
+    </tr>
+    <tr>
+      <td>last name</td>
+      <td><input type="text" name="lname" /></td>
+    </tr>
+    <tr>
+      <td>Email</td>
+      <td><input type="text" name="lname" /></td>
+    </tr>
+    <tr>
+      <td>Password</td>
+      <td><input type="password" name="lname" /></td>
+    </tr>
+    <tr>
+      <td>Confirm Password</td>
+      <td><input type="password" name="lname" /></td>
+    </tr>
+    <tr>
+      <td colspan="2"><input type="submit" value="Sign up" /></td>
+    </tr>
+  </table>
+</form>
