--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,28 +1,25 @@
 <h1><%=title%></h1>
-<form name="form1" method="POST" action="/submit">
+<form name="form" method="POST" action="/submit">
   <table>
     <tr>
-      <td>First name</td>
-      <td><input type="text" name="fname" /></td>
-    </tr>
-    <tr>
-      <td>last name</td>
-      <td><input type="text" name="lname" /></td>
+      <td>User Name</td>
+      <td><input type="text" name="userName" /></td>
     </tr>
     <tr>
       <td>Email</td>
-      <td><input type="text" name="lname" /></td>
+      <td><input type="email" name="email" /></td>
     </tr>
     <tr>
       <td>Password</td>
-      <td><input type="password" name="lname" /></td>
+      <td><input type="password" name="password" /></td>
     </tr>
     <tr>
       <td>Confirm Password</td>
-      <td><input type="password" name="lname" /></td>
+      <td><input type="password" name="re-password" /></td>
     </tr>
     <tr>
-      <td colspan="2"><input type="submit" value="Sign up" /></td>
+      <td colspan="2"><button type="submit">Sign Up</button></td>
     </tr>
   </table>
 </form>
+<script src="/javascripts/validation.js"></script>
